@@ -4,7 +4,7 @@
 
   <groupId>io.apiman</groupId>
   <artifactId>apiman</artifactId>
-  <version>1.2.10-SNAPSHOT</version>
+  <version>1.3.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>apiman</name>
 
@@ -71,6 +71,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <timestamp>${maven.build.timestamp}</timestamp>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
 
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -82,7 +84,7 @@
 
     <!-- Plugin Versions -->
     <version.antrun.plugin>1.7</version.antrun.plugin>
-    <version.assembly.plugin>2.5</version.assembly.plugin>
+    <version.assembly.plugin>3.0.0</version.assembly.plugin>
     <version.buildhelper.plugin>1.9.1</version.buildhelper.plugin>
     <version.buildnumber.plugin>1.3</version.buildnumber.plugin>
     <version.bundle.plugin>2.5.3</version.bundle.plugin>
@@ -104,19 +106,21 @@
     <version.failsafe.plugin>2.14</version.failsafe.plugin>
     <version.war.plugin>2.5</version.war.plugin>
     <version.exec.plugin>1.3.2</version.exec.plugin>
-    <version.docker.plugin>0.11.2</version.docker.plugin>
-    <version.frontend-maven.plugin>0.0.27</version.frontend-maven.plugin>
+    <version.docker.plugin>0.23.0</version.docker.plugin>
+    <version.frontend-maven.plugin>1.3</version.frontend-maven.plugin>
+    <version.git-commit-id.plugin>2.2.1</version.git-commit-id.plugin>
 
     <!-- Dependency Versions -->
-    <version.com.fasterxml.jackson>2.5.4</version.com.fasterxml.jackson>
+    <version.com.fasterxml.jackson>2.9.2</version.com.fasterxml.jackson>
     <version.com.h2database>1.3.173</version.com.h2database>
+    <version.com.lmax>3.2.0</version.com.lmax>
     <version.com.squareup.okhttp>2.4.0</version.com.squareup.okhttp>
     <version.com.squareup.okio>1.4.0</version.com.squareup.okio>
     <version.com.unboundid.unboundid-ldapsdk>3.0.0</version.com.unboundid.unboundid-ldapsdk>
-    <version.commons-beanutils>1.9.2</version.commons-beanutils>
+    <version.commons-beanutils>1.9.3</version.commons-beanutils>
     <version.commons-codec>1.10</version.commons-codec>
     <version.commons-collections>3.2.2</version.commons-collections>
-    <version.commons-configuration>1.6</version.commons-configuration>
+    <version.commons-configuration>1.10</version.commons-configuration>
     <version.commons-dbcp>1.4</version.commons-dbcp>
     <version.commons-dbutils>1.6</version.commons-dbutils>
     <version.commons-io>2.4</version.commons-io>
@@ -125,6 +129,7 @@
     <version.commons-pool>1.6</version.commons-pool>
     <version.com.zaxxer>2.4.0</version.com.zaxxer>
     <version.com.google.code.gson>2.3.1</version.com.google.code.gson>
+    <version.com.google.guava>21.0</version.com.google.guava>
     <version.io.searchbox.jest>0.1.7</version.io.searchbox.jest>
     <version.io.prometheus>0.0.13</version.io.prometheus>
     <version.javax.enterprise>1.2</version.javax.enterprise>
@@ -133,32 +138,33 @@
     <version.org.apache.commons.commons-lang3>3.3.2</version.org.apache.commons.commons-lang3>
     <version.org.apache.directory.server>1.5.7</version.org.apache.directory.server>
     <version.org.apache.directory.shared-ldap>0.9.19</version.org.apache.directory.shared-ldap>
-    <version.org.apache.httpcomponents.httpclient>4.5</version.org.apache.httpcomponents.httpclient>
+    <version.org.apache.httpcomponents.httpclient>4.5.3</version.org.apache.httpcomponents.httpclient>
     <version.org.apache.httpcomponents.httpcore>4.4.1</version.org.apache.httpcomponents.httpcore>
     <version.org.apache.httpcomponents.httpasyncclient>4.1</version.org.apache.httpcomponents.httpasyncclient>
-    <version.org.apache.logging.log4j>2.2</version.org.apache.logging.log4j>
-    <version.org.eclipse.jetty>9.2.10.v20150310</version.org.eclipse.jetty>
+    <version.org.apache.logging.log4j>2.8.2</version.org.apache.logging.log4j>
+    <version.org.eclipse.jetty>9.2.20.v20161216</version.org.eclipse.jetty>
+    <version.org.glassfish.javax.el>3.0.0</version.org.glassfish.javax.el>
     <version.org.elasticsearch>1.7.2</version.org.elasticsearch>
     <version.org.hibernate.javax.persistence.hibernate-jpa-2.1-api>1.0.0.Final</version.org.hibernate.javax.persistence.hibernate-jpa-2.1-api>
     <version.org.hibernate>5.0.9.Final</version.org.hibernate>
-    <version.org.infinispan>8.1.2.Final</version.org.infinispan>
+    <version.org.infinispan>8.1.9.Final</version.org.infinispan>
     <version.org.jboss.jandex>2.0.2.Final</version.org.jboss.jandex>
     <version.org.jboss.logging.jboss-logging>3.3.0.Final</version.org.jboss.logging.jboss-logging>
-    <version.org.jboss.resteasy>3.0.16.Final</version.org.jboss.resteasy>
+    <version.org.jboss.resteasy>3.1.4.Final</version.org.jboss.resteasy>
     <version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.0_spec>1.0.2.Final</version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.0_spec>
     <version.org.jboss.spec.javax.transaction.jboss-transaction-api_1.2_spec>1.0.0.Final</version.org.jboss.spec.javax.transaction.jboss-transaction-api_1.2_spec>
     <version.org.jboss.spec.javax.ws.jboss-jaxrs-api_2.0_spec>1.0.0.Final</version.org.jboss.spec.javax.ws.jboss-jaxrs-api_2.0_spec>
     <version.org.jboss.weld.weld>2.3.3.Final</version.org.jboss.weld.weld>
-    <version.org.keycloak>2.0.0.Final</version.org.keycloak>
+    <version.org.keycloak>2.5.5.Final</version.org.keycloak>
     <version.org.mockito>1.9.5</version.org.mockito>
     <version.org.mvel>2.2.7.Final</version.org.mvel>
     <version.org.osgi>4.2.0</version.org.osgi>
     <version.org.picketbox>4.9.6.Final</version.org.picketbox>
-    <version.org.slf4j>1.7.7</version.org.slf4j>
-    <version.io.netty>4.1.6.Final</version.io.netty>
-    <version.io.swagger>1.5.7</version.io.swagger>
+    <version.org.slf4j>1.7.21</version.org.slf4j>
+    <version.io.netty>4.1.8.Final</version.io.netty>
+    <version.io.swagger>1.5.13</version.io.swagger>
     <version.xmlunit>1.6</version.xmlunit>
-    <version.io.vertx>3.3.2</version.io.vertx>
+    <version.io.vertx>3.4.2</version.io.vertx>
     <version.net.openhft>0.6</version.net.openhft>
     <version.com.ibm.icu4j>57.1</version.com.ibm.icu4j>
     <version.com.hazelcast>3.6.4</version.com.hazelcast>
@@ -172,6 +178,11 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>apiman-tools-server-all</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>apiman-common-es</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -447,6 +458,21 @@
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
+        <artifactId>apiman-gateway-engine-vertx-polling</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>apiman-gateway-engine-3scale</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>apiman-gateway-engine-vertx-shareddata</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
         <artifactId>apiman-gateway-engine-prometheus</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -501,6 +527,12 @@
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
+        <artifactId>apiman-gateway-platforms-vertx3</artifactId>
+        <version>${project.version}</version>
+        <classifier>fat</classifier>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
         <artifactId>apiman-gateway-platforms-vertx3-common</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -551,20 +583,6 @@
         <artifactId>apiman-distro-es</artifactId>
         <version>${project.version}</version>
         <type>war</type>
-      </dependency>
-      <dependency>
-        <groupId>${project.groupId}</groupId>
-        <artifactId>apiman-distro-wildfly8</artifactId>
-        <version>${project.version}</version>
-        <type>zip</type>
-        <classifier>overlay</classifier>
-      </dependency>
-      <dependency>
-        <groupId>${project.groupId}</groupId>
-        <artifactId>apiman-distro-wildfly9</artifactId>
-        <version>${project.version}</version>
-        <type>zip</type>
-        <classifier>overlay</classifier>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
@@ -649,9 +667,9 @@
 
       <!-- Third Party Libraries -->
       <dependency>
-	<groupId>net.openhft</groupId>
-	<artifactId>zero-allocation-hashing</artifactId>
-	<version>${version.net.openhft}</version>
+        <groupId>net.openhft</groupId>
+        <artifactId>zero-allocation-hashing</artifactId>
+        <version>${version.net.openhft}</version>
       </dependency>
       <dependency>
         <groupId>com.zaxxer</groupId>
@@ -863,8 +881,18 @@
         </exclusions>
       </dependency>
       <dependency>
+        <groupId>commons-collections</groupId>
+        <artifactId>commons-collections</artifactId>
+        <version>${version.commons-collections}</version>
+      </dependency>
+      <dependency>
         <groupId>org.jboss.resteasy</groupId>
         <artifactId>resteasy-jaxrs</artifactId>
+        <version>${version.org.jboss.resteasy}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jboss.resteasy</groupId>
+        <artifactId>resteasy-vertx</artifactId>
         <version>${version.org.jboss.resteasy}</version>
       </dependency>
       <dependency>
@@ -933,8 +961,23 @@
         <version>${version.com.google.code.gson}</version>
       </dependency>
       <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${version.com.google.guava}</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
+        <version>${version.org.apache.logging.log4j}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>${version.org.apache.logging.log4j}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-slf4j-impl</artifactId>
         <version>${version.org.apache.logging.log4j}</version>
       </dependency>
       <dependency>
@@ -957,7 +1000,11 @@
         <artifactId>hazelcast</artifactId>
         <version>${version.com.hazelcast}</version>
       </dependency>
-
+      <dependency>
+        <groupId>com.lmax</groupId>
+        <artifactId>disruptor</artifactId>
+        <version>${version.com.lmax}</version>
+      </dependency>
       <!-- Spec Libraries -->
       <dependency>
         <groupId>javax.json</groupId>
@@ -998,6 +1045,12 @@
         <groupId>org.mvel</groupId>
         <artifactId>mvel2</artifactId>
         <version>${version.org.mvel}</version>
+      </dependency>
+      <dependency> <!-- Stop Maven trying to download snapshot version. -->
+        <groupId>org.glassfish</groupId>
+        <artifactId>javax.el</artifactId>
+        <version>${version.org.glassfish.javax.el}</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.keycloak</groupId>
@@ -1067,6 +1120,11 @@
         <artifactId>vertx-sql-common</artifactId>
         <version>${version.io.vertx}</version>
       </dependency>
+      <dependency>
+        <groupId>io.vertx</groupId>
+        <artifactId>vertx-auth-oauth2</artifactId>
+        <version>${version.io.vertx}</version>
+      </dependency>
 
       <!-- Swagger 2.0 -->
       <dependency>
@@ -1082,9 +1140,9 @@
 
       <!-- Transliteration -->
       <dependency>
-	<groupId>com.ibm.icu</groupId>
-	<artifactId>icu4j</artifactId>
-	<version>${version.com.ibm.icu4j}</version>
+        <groupId>com.ibm.icu</groupId>
+        <artifactId>icu4j</artifactId>
+        <version>${version.com.ibm.icu4j}</version>
       </dependency>
 
       <!-- Test -->
@@ -1138,12 +1196,12 @@
               <configuration>
                 <fail>true</fail>
                 <rules>
-                  <illegalTransitiveDependencyCheck
-                    implementation="de.is24.maven.enforcer.rules.IllegalTransitiveDependencyCheck">
+                  <illegalTransitiveDependencyCheck implementation="de.is24.maven.enforcer.rules.IllegalTransitiveDependencyCheck">
                     <reportOnly>false</reportOnly>
                     <regexIgnoredClasses>
                       <regexIgnoredClass>javax\..+</regexIgnoredClass>
                       <regexIgnoredClass>org.w3c.dom\..+</regexIgnoredClass>
+                      <regexIgnoredClass>io.netty.buffer.ByteBuf</regexIgnoredClass>
                     </regexIgnoredClasses>
                     <useClassesFromLastBuild>true</useClassesFromLastBuild>
                   </illegalTransitiveDependencyCheck>
@@ -1267,6 +1325,7 @@
             <systemProperties>
               <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
             </systemProperties>
+            <argLine>-Xmx1024m</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -1297,6 +1356,49 @@
       </plugins>
     </pluginManagement>
     <plugins>
+      <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+        <version>${version.git-commit-id.plugin}</version>
+        <executions>
+          <execution>
+            <id>get-the-git-infos</id>
+            <goals>
+              <goal>revision</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+          <dateFormat>yyyy-MM-dd'T'HH:mm:ss'Z'</dateFormat>
+          <dateFormatTimeZone>UTC</dateFormatTimeZone>
+          <verbose>false</verbose>
+          <generateGitPropertiesFile>false</generateGitPropertiesFile>
+          <skipPoms>true</skipPoms>
+          <injectAllReactorProjects>false</injectAllReactorProjects>
+          <failOnNoGitDirectory>false</failOnNoGitDirectory>
+          <failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
+          <useNativeGit>false</useNativeGit>
+          <abbrevLength>7</abbrevLength>
+          <commitIdGenerationMode>flat</commitIdGenerationMode>
+          <gitDescribe>
+            <always>false</always>
+            <!-- Chars to displayed as the commit object id? 7 is git's default -->
+            <abbrev>7</abbrev>
+            <!-- When the build is triggered while the repo is in "dirty state", append this suffix -->
+            <dirty>-dirty</dirty>
+            <!-- Only consider tags matching the given pattern. This can be used to avoid leaking private tags from the repository. -->
+            <match>*</match>
+            <!-- When you run git-describe it only looks only for *annotated tags* by default -->
+            <tags>false</tags>
+            <!--
+            always print using the "tag-commits_from_tag-g_commit_id-maybe_dirty" format, even if "on" a tag.
+            The distance will always be 0 if you're "on" the tag.
+          -->
+            <forceLongFormat>false</forceLongFormat>
+          </gitDescribe>
+        </configuration>
+      </plugin>
       <!-- Enforcer-related stuff -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -1350,7 +1452,7 @@
               <value>${basedir}/target</value>
             </property>
           </systemProperties>
-          <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+          <argLine>-Xmx512m</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -1403,22 +1505,6 @@
         <enabled>false</enabled>
       </snapshots>
     </repository>
-
-    <repository>
-      <id>jboss-public-repository-group</id>
-      <name>JBoss Public Repository Group</name>
-      <url>http://repository.jboss.org/nexus/content/groups/public/</url>
-      <layout>default</layout>
-      <releases>
-        <enabled>true</enabled>
-        <updatePolicy>never</updatePolicy>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-        <updatePolicy>daily</updatePolicy>
-      </snapshots>
-    </repository>
-
     <repository>
       <id>snapshots-repo</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
@@ -1426,26 +1512,12 @@
   </repositories>
 
   <pluginRepositories>
-    <!-- Prefer Maven Central to jboss.org. POM has top-to-bottom precedence. -->
     <pluginRepository>
       <id>central</id>
       <url>https://repo1.maven.org/maven2</url>
       <releases>
         <enabled>true</enabled>
       </releases>
-    </pluginRepository>
-
-    <pluginRepository>
-      <id>jboss-public-repository-group</id>
-      <name>JBoss Public Repository Group</name>
-      <url>http://repository.jboss.org/nexus/content/groups/public/</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-        <updatePolicy>always</updatePolicy>
-      </snapshots>
     </pluginRepository>
   </pluginRepositories>
 
